--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -30,5 +30,10 @@ jobs:
         version: v2.6
         args: controllers/ database/ models/ routes/
 
-    - name: Test
-      run: DB_HOST=localhost DB_USER=root DB_PASSWORD=root DB_NAME=root DB_PORT=5432  go test -v ./...
+    # - name: Test
+    #   run: DB_HOST=localhost DB_USER=root DB_PASSWORD=root DB_NAME=root DB_PORT=5432  go test -v ./...
+    - name: Projeto compilado
+      uses: actions/upload-artifact@v4
+      with:
+        name: projeto_compilado
+        path: main
