--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -32,6 +32,9 @@ jobs:
 
     # - name: Test
     #   run: DB_HOST=localhost DB_USER=root DB_PASSWORD=root DB_NAME=root DB_PORT=5432  go test -v ./...
+    - name: Build
+      run: go build main.go
+      
     - name: Projeto compilado
       uses: actions/upload-artifact@v4
       with:
